6442502: assert(bits,"Use TypePtr for NULL") on linux-x86

Reviewed-by: kvn